@@ -1,12 +1,12 @@
 ::
 :: Copyright 2019 GridGain Systems, Inc. and Contributors.
-:: 
+::
 :: Licensed under the GridGain Community Edition License (the "License");
 :: you may not use this file except in compliance with the License.
 :: You may obtain a copy of the License at
-:: 
+::
 ::     https://www.gridgain.com/products/software/community-edition/gridgain-community-edition-license
-:: 
+::
 :: Unless required by applicable law or agreed to in writing, software
 :: distributed under the License is distributed on an "AS IS" BASIS,
 :: WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -168,6 +168,11 @@ if %ERRORLEVEL% equ 0 (
 )
 
 ::
+:: Uncomment to enable experimental commands [--wal]
+::
+:: set JVM_OPTS=%JVM_OPTS% -DIGNITE_ENABLE_EXPERIMENTAL_COMMAND=true
+
+::
 :: Uncomment the following GC settings if you see spikes in your throughput due to Garbage Collection.
 ::
 :: set JVM_OPTS=%JVM_OPTS% -XX:+UseG1GC
@@ -226,7 +231,6 @@ if %MAJOR_JAVA_VER% GEQ 9 if %MAJOR_JAVA_VER% LSS 11 (
     --add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED ^
     --add-exports=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED ^
     --illegal-access=permit ^
-    --add-modules=java.transaction ^
     --add-modules=java.xml.bind ^
     %JVM_OPTS%
 )
